--- a/lecture.Rmd
+++ b/lecture.Rmd
@@ -178,7 +178,7 @@ In this case, I actually like the sideways text, but that is for purely aestheti
 
 # Tonight!
 
-We _are_ going to introduce a lof of new ideas.
+We _are_ going to introduce a lot of new ideas.
 
 Let me encourage you to read/watch:
 
